WIP MDEV-25683 Atomic DDL recovery crash with innodb_force_recovery=3

innodb_init_params(): If innodb_force_recovery is set to at least 3
(to prevent the rollback of any transactions) or if innodb_read_only
is set, we cannot allow the DDL recovery to run due to possible
locking conflicts or because we would set high_level_read_only.
Hence, we will invoke ddl_log_check_if_engine_is_used() to ensure
that no DDL log recovery will be executed in these cases.

innodb_name: Replaces innobase_hton_name.

The changes to sql/ are by Monty.

FIXME: The test innodb.alter_copy fails to remove an #sql-alter table.